# contactdoc

./: .gitignore  README.md  SPEC.md  pyproject.toml
config/: default.yaml  smoke_test.yaml
contactdoc/: clusters.py  io.py  manifest.py  serialize.py  tokenizer.py
contactdoc/generators/: __init__.py  base.py  deterministic_positives_only.py
scripts/: bq_make_manifest.py  build_dataset.py  contact_stats.py  generate_docs.py  make_parquet_manifest.py  run_local.py  upload_to_hf.py  view_dataset.py
